Jun 21 2005  devel  Merged patches from Pedro for OpenBSD ralink, prism2, and
                     readme
Jun 20 2005  devel  Fixed condition where gps mode wasn't updated 
                    Updated to libpcap 0.9.1-kis
                    Patched libpcap to not include filtering code.  Kismet
                     doesn't use it, and its 100k of binary we can drop
Jun 19 2005  devel  Added more wireless vendors to the manuf map
Jun 18 2005  devel  Updated AP manuf/defaults info
                    Rewrote GPSD handling to be more like newcore, to correctly
                     handle error conditions with ESRs new GPSD code
                    Rewrote distance and heading code to (hopefully) clear
                     up some bugs
                    Fixed 'follow gps' in client (broken in -devel only)
                    Fixed 'follow network' heading calculations in client
                    Fixed range to only show 3 significant digits in client
Jun 13 2005  devel  Fixed a pile of little broken parts of code thanks to a
                     pass through a static code analyser
Jun 11 2005  devel  Fixed compile error on wsp100 capture type, but I suspect
                     the capture source has other problems still.
                    Updated README, added some FAQs in the silly hope someone
                     will read them.
                    Fixed minor linewrap issues in display
                    Fixed minor rate graph issue where it overflowed the box,
                     still sometimes looks too small
Jun 09 2005  devel  Fixed stupid error introduced last night in new prism2 code
                    Merged patch from Pedro for fbsd compat
                    Changed net/cli info 'WEP' to 'Privacy'
                    Added ad-hoc autogrouping to kismet_client
Jun 08 2005  devel  Tweaked prism2 pcap header length handling for extra safety
                    Tweaked configure to error out on socklen_t properly on
                     cygwin