@@ -1,5 +1,6 @@
 Jun 21 2005  devel  Merged patches from Pedro for OpenBSD ralink, prism2, and
                      readme
+                    Deprecated broken gpsmap sources and set default to blank
 Jun 20 2005  devel  Fixed condition where gps mode wasn't updated 
                     Updated to libpcap 0.9.1-kis
                     Patched libpcap to not include filtering code.  Kismet
